Merged branch B2005_09_01_Groups onto HEAD.